# HaskellAutoGrader

./: AutoGrader357.cabal  LICENSE  Notes.txt  README.md
Scripts/: CleanSource.sh  HomeworkToPdf.sh  Init.sh  InitHWDir.sh  RunGrader.sh
Scripts/ConfigFiles/: SampleConfig.json
src/AutoGrader/: ConfigParser.hs  Main.hs  OutputScorer.hs
src/LhsToHs/: Main.hs
src/UnitTester/: Main.hs
