name:                AutoGrader357
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JHaugh4/AutoGrader357#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Haugh
maintainer:          jhaugh500@gmail.com
copyright:           2018
category:            Homework
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AutoGrader357
  hs-source-dirs:      src/AutoGrader
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       ConfigParser
                     , OutputScorer
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , containers
                     , bytestring
                     , strict

executable LhsToHs
  hs-source-dirs:      src/LhsToHs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src/UnitTester
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , QuickCheck
               , random
               , checkers
               , hspec